# ulang

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  test.bkp.ul  test.bkp2.ul  test.ul
docs/: GrammarDeclarations.md
src/: ast.h  char_utils.h  compiler.h  keywords.h  lexer.h  main.cpp  parser.h  pretty_printer.h  streams.h  tokens.h  type_checker.h  type_system.h
src/parser/: Makefile  lexer.l  parser.y  parser_ctx.cpp  parser_ctx.h  pattern_parser.h  uparser  uparser.cpp  uparser.h
src/parser/runtime/: runtime.cpp  runtime.h
tests/: main.ul
tests/preprocessor/: loops.ul  loops.ulo  params.ul  params.ulo  prototype.ul  prototype.ulo
tests/syntax/: fun_declare.ul
